formatting work on database 10/4/20

--- a/mjs-thesis/format_columns.ipynb
+++ b/mjs-thesis/format_columns.ipynb
@@ -100,7 +100,7 @@
    ],
    "source": [
     "# hup m05\n",
-    "hup_m05_formatted = [basic_format(cog) for cog in cognates['hup_m05']]\n",
+    "hup_m05_formatted = [basic_format(cog) fory cog in cognates['hup_m05']]\n",
     "hup_m05_formatted[:20]"
    ]
   },
