--- a/Aulas/Sotaques/Semana6/latex/mjs5839-hw6.tex
+++ b/Aulas/Sotaques/Semana6/latex/mjs5839-hw6.tex
@@ -17,9 +17,9 @@
 
 \usepackage{mdwlist}
 \usepackage{enumitem}
-\title{Homework 5}
+\title{Homework 6}
 \author{Mark Simmons}
-\date{September 25, 2020}
+\date{October 2, 2020}
 
 % Multi-line glosses
 \usepackage{chngcntr}
@@ -40,7 +40,7 @@
 \maketitle
 
 \begin{enumerate}
-    \item Background on Martha's Vineyard
+    \item
           \begin{enumerate}
               \item Martha's Vineyard is located in Dukes County, Massachusetts (p275)
               \item Rural and poor (p276)
@@ -50,7 +50,7 @@
               \item 42,000, eight times the number of permanent residents (p278)
               \item Rhotic (p278)
           \end{enumerate}
-
+    \item
           \begin{enumerate}
               \item 69 (p284)
               \item up-islanders come from the rural, less densely inhabited part of the island (p276); 40 speakers (p284)
@@ -60,6 +60,7 @@
               \item A lexical questionnaire, value judgements intended to elicit words w/ diphthongs in various emotional states,
                     and a reading of a short story (p283)
           \end{enumerate}
+    \item
 
           \begin{enumerate}
               \item Voiceless obstruents (p281)
@@ -70,18 +71,19 @@
               \item Indians had the highest median and maximum CI, and Anglos had the highest minimum bound on CI (p295)
               \item Speakers that resented incursion by tourists and summer vacationers buying up the land are more likely to have a high CI (p297)
               \item As progressive generations of Portuguese immigrants assimilated into Yankee culture, they began to participate more in the
-              native dialect (pp301-302). Likewise, as the Indian population lost their own language and much of their culture, they adopted the
-              speech patterns that marked them as belonging to Martha's Vineyard (p304)
+                    native dialect (pp301-302). Likewise, as the Indian population lost their own language and much of their culture, they adopted the
+                    speech patterns that marked them as belonging to Martha's Vineyard (p304)
 
           \end{enumerate}
 
-          \item Our group had pretty diverse backgrounds, given that we came from three different countries. Me and Heath both come from suburbs north of
+    \item Our group had pretty diverse backgrounds, given that we came from three different countries. Me and Heath both come from suburbs north of
           Austin. Our towns were fairly homogenous - most residents owned their homes as opposed to renting, and there weren't significant disparities in
           quality of education between different schools. For Chi and Francesco, the class disparities were much more profound. Francesco reported that in
           Kenya there was a very large population that was nearly or completely uneducated, and a small cohort of highly-educated expats. Chi said his hometown
-          had few residents with high educational attainment.
+          had few residents with high educational attainment, and that most public schools were relatively homogenous with regard to income, and that most
+          high income families were concentrated in private schools.
           All of us reported that prestige, as far as we could perceive, was associated more with educational attainment than with any particular kind of work.
-          
+
 \end{enumerate}
 
 
